--- a/setEndianess.ui
+++ b/setEndianess.ui
@@ -100,7 +100,7 @@ padding-right: 5px;
     <string>Big Endian</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_3">
+  <widget class="QLabel" name="labelDataEndianness">
    <property name="geometry">
     <rect>
      <x>30</x>
@@ -112,10 +112,12 @@ padding-right: 5px;
    <property name="font">
     <font>
      <pointsize>-1</pointsize>
-     <weight>75</weight>
      <italic>false</italic>
      <bold>true</bold>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: black;</string>
    </property>
    <property name="text">
     <string>Data Endianess</string>
