--- a/setsize.ui
+++ b/setsize.ui
@@ -14,37 +14,9 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">/*
-QDialog {
-	background-image: url(:/Images/Marble.jpg);
-}
-
-QLabel{
-font: bold &quot;Ubuntu&quot;;
-font-size: 12px;
-color: lightgray;
-}
-
-QRadioButton{
-font:  bold &quot;Ubuntu&quot;;
-font-size:11px;
-color: lightgray;
-}
-
-QRadioButton::indicator::checked{
-background: url(:/Images/Ressource/check-marks_check.png);
-width: 33;
-height: 26;
-}
-
-QRadioButton::indicator:unchecked{
-background: url(:/Images/Ressource/check-marks_uncheck.png);
-width: 33;
-height: 26;
-}
-
+   <string notr="true">
 QPushButton {
-color: #DFD;
+color: white;
 background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1,  stop: 0 #6B82AC, stop: 0.49 #566D97, stop: 0.5 #445B85, stop: 1 #566D97);
 border-width: 2px;
 border-color: #778EB8;
@@ -64,8 +36,7 @@ border-color: #778EB8;
 border-style: solid;
 border-radius: 7;
 }
-
-*/</string>
+</string>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
@@ -283,7 +254,6 @@ border-radius: 7;
    </property>
    <property name="font">
     <font>
-     <weight>75</weight>
      <italic>false</italic>
      <bold>true</bold>
     </font>
