--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -2321,8 +2321,8 @@ font-size: 12px;
      <widget class="QLineEdit" name="MemoryOffset">
       <property name="geometry">
        <rect>
-        <x>200</x>
-        <y>160</y>
+        <x>60</x>
+        <y>240</y>
         <width>251</width>
         <height>31</height>
        </rect>
@@ -2331,8 +2331,8 @@ font-size: 12px;
      <widget class="QCheckBox" name="checkBoxBinary">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>100</y>
+        <x>60</x>
+        <y>170</y>
         <width>131</width>
         <height>20</height>
        </rect>
@@ -2344,8 +2344,8 @@ font-size: 12px;
      <widget class="QCheckBox" name="checkBoxLoadable">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>70</y>
+        <x>60</x>
+        <y>140</y>
         <width>131</width>
         <height>20</height>
        </rect>
@@ -2358,7 +2358,7 @@ font-size: 12px;
       <property name="geometry">
        <rect>
         <x>50</x>
-        <y>160</y>
+        <y>210</y>
         <width>121</width>
         <height>27</height>
        </rect>
@@ -2380,9 +2380,9 @@ font-size: 12px;
      <widget class="QCheckBox" name="checkBoxLittleEndian">
       <property name="geometry">
        <rect>
-        <x>710</x>
-        <y>80</y>
-        <width>81</width>
+        <x>60</x>
+        <y>320</y>
+        <width>91</width>
         <height>20</height>
        </rect>
       </property>
@@ -2393,9 +2393,9 @@ font-size: 12px;
      <widget class="QCheckBox" name="checkBoxBigEndian">
       <property name="geometry">
        <rect>
-        <x>710</x>
-        <y>140</y>
-        <width>81</width>
+        <x>60</x>
+        <y>350</y>
+        <width>91</width>
         <height>20</height>
        </rect>
       </property>
@@ -2406,8 +2406,8 @@ font-size: 12px;
      <widget class="QLabel" name="LabelStaticEndianness">
       <property name="geometry">
        <rect>
-        <x>700</x>
-        <y>40</y>
+        <x>50</x>
+        <y>280</y>
         <width>121</width>
         <height>27</height>
        </rect>
@@ -2429,8 +2429,8 @@ font-size: 12px;
      <widget class="QRadioButton" name="radioButton_320x200">
       <property name="geometry">
        <rect>
-        <x>660</x>
-        <y>470</y>
+        <x>630</x>
+        <y>240</y>
         <width>101</width>
         <height>27</height>
        </rect>
@@ -2442,8 +2442,8 @@ font-size: 12px;
      <widget class="QLineEdit" name="lineEdit_CustomHeight">
       <property name="geometry">
        <rect>
-        <x>1020</x>
-        <y>400</y>
+        <x>990</x>
+        <y>170</y>
         <width>91</width>
         <height>31</height>
        </rect>
@@ -2452,8 +2452,8 @@ font-size: 12px;
      <widget class="QLabel" name="label_3">
       <property name="geometry">
        <rect>
-        <x>660</x>
-        <y>260</y>
+        <x>630</x>
+        <y>30</y>
         <width>281</width>
         <height>31</height>
        </rect>
@@ -2465,6 +2465,9 @@ font-size: 12px;
         <bold>true</bold>
        </font>
       </property>
+      <property name="styleSheet">
+       <string notr="true">color: black;</string>
+      </property>
       <property name="text">
        <string>Display Size</string>
       </property>
@@ -2472,8 +2475,8 @@ font-size: 12px;
      <widget class="QRadioButton" name="radioButton_800x600">
       <property name="geometry">
        <rect>
-        <x>800</x>
-        <y>470</y>
+        <x>770</x>
+        <y>240</y>
         <width>101</width>
         <height>27</height>
        </rect>
@@ -2485,8 +2488,8 @@ font-size: 12px;
      <widget class="QRadioButton" name="radioButton_128x128">
       <property name="geometry">
        <rect>
-        <x>660</x>
-        <y>390</y>
+        <x>630</x>
+        <y>160</y>
         <width>101</width>
         <height>27</height>
        </rect>
@@ -2498,8 +2501,8 @@ font-size: 12px;
      <widget class="QRadioButton" name="radioButton_320x240">
       <property name="geometry">
        <rect>
-        <x>800</x>
-        <y>310</y>
+        <x>770</x>
+        <y>80</y>
         <width>101</width>
         <height>27</height>
        </rect>
@@ -2511,8 +2514,8 @@ font-size: 12px;
      <widget class="QRadioButton" name="radioButton_96x64">
       <property name="geometry">
        <rect>
-        <x>660</x>
-        <y>350</y>
+        <x>630</x>
+        <y>120</y>
         <width>101</width>
         <height>27</height>
        </rect>
@@ -2524,8 +2527,8 @@ font-size: 12px;
      <widget class="QRadioButton" name="radioButton_CustomSize">
       <property name="geometry">
        <rect>
-        <x>960</x>
-        <y>310</y>
+        <x>930</x>
+        <y>80</y>
         <width>151</width>
         <height>27</height>
        </rect>
@@ -2537,8 +2540,8 @@ font-size: 12px;
      <widget class="QRadioButton" name="radioButton_480x272">
       <property name="geometry">
        <rect>
-        <x>800</x>
-        <y>350</y>
+        <x>770</x>
+        <y>120</y>
         <width>101</width>
         <height>27</height>
        </rect>
@@ -2550,8 +2553,8 @@ font-size: 12px;
      <widget class="QRadioButton" name="radioButton_640x480">
       <property name="geometry">
        <rect>
-        <x>800</x>
-        <y>390</y>
+        <x>770</x>
+        <y>160</y>
         <width>101</width>
         <height>27</height>
        </rect>
@@ -2563,8 +2566,8 @@ font-size: 12px;
      <widget class="QRadioButton" name="radioButton_84x48">
       <property name="geometry">
        <rect>
-        <x>660</x>
-        <y>310</y>
+        <x>630</x>
+        <y>80</y>
         <width>101</width>
         <height>27</height>
        </rect>
@@ -2576,11 +2579,14 @@ font-size: 12px;
      <widget class="QLabel" name="label_Height">
       <property name="geometry">
        <rect>
-        <x>960</x>
-        <y>400</y>
+        <x>930</x>
+        <y>170</y>
         <width>51</width>
         <height>27</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: black</string>
       </property>
       <property name="text">
        <string>Height:</string>
@@ -2589,8 +2595,8 @@ font-size: 12px;
      <widget class="QRadioButton" name="radioButton_240x320">
       <property name="geometry">
        <rect>
-        <x>660</x>
-        <y>430</y>
+        <x>630</x>
+        <y>200</y>
         <width>101</width>
         <height>27</height>
        </rect>
@@ -2602,8 +2608,8 @@ font-size: 12px;
      <widget class="QLineEdit" name="lineEdit_CustomWidth">
       <property name="geometry">
        <rect>
-        <x>1020</x>
-        <y>350</y>
+        <x>990</x>
+        <y>120</y>
         <width>91</width>
         <height>31</height>
        </rect>
@@ -2612,8 +2618,8 @@ font-size: 12px;
      <widget class="QRadioButton" name="radioButton_800x480">
       <property name="geometry">
        <rect>
-        <x>800</x>
-        <y>430</y>
+        <x>770</x>
+        <y>200</y>
         <width>101</width>
         <height>27</height>
        </rect>
@@ -2625,14 +2631,74 @@ font-size: 12px;
      <widget class="QLabel" name="labelWidth">
       <property name="geometry">
        <rect>
-        <x>960</x>
-        <y>350</y>
+        <x>930</x>
+        <y>120</y>
         <width>51</width>
         <height>27</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">color: black
+</string>
+      </property>
       <property name="text">
        <string>Width:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="LabelStaticSkinType">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>100</y>
+        <width>121</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>-1</pointsize>
+        <italic>false</italic>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: black;</string>
+      </property>
+      <property name="text">
+       <string>Skin Type:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="LabelStaticSkinFilename">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>30</y>
+        <width>121</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>-1</pointsize>
+        <italic>false</italic>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: black;</string>
+      </property>
+      <property name="text">
+       <string>Skin Filename:</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="SkinFileName">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>60</y>
+        <width>251</width>
+        <height>31</height>
+       </rect>
       </property>
      </widget>
     </widget>
@@ -2659,15 +2725,7 @@ font-size: 12px;
     <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
-   <widget class="QMenu" name="menuFile">
-    <property name="title">
-     <string>Option</string>
-    </property>
-    <addaction name="actionSet_Display_Size"/>
-    <addaction name="actionSet_Endianess"/>
-   </widget>
    <addaction name="menuOptions"/>
-   <addaction name="menuFile"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionOpen_Skin">
